Assets/Resources/IronPython/pyLogoCompiler/parser.out
Created by PLY version 3.2 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> procedures
Rule 1     procedures -> procedure procedures
Rule 2     procedures -> procedure
Rule 3     procedure -> TO PROCEDURENAME statements END
Rule 4     procedure -> TO PROCEDURENAME parameterDeclaration statements END
Rule 5     parameterDeclaration -> RECEIVER parameterDeclaration
Rule 6     parameterDeclaration -> RECEIVER
Rule 7     statements -> statement statements
Rule 8     statements -> statement
Rule 9     statement -> REPEAT expression LBRACKET statements RBRACKET
Rule 10    statement -> WHILE expression LBRACKET statements RBRACKET
Rule 11    statement -> LOOP LBRACKET statements RBRACKET
Rule 12    statement -> FOREVER LBRACKET statements RBRACKET
Rule 13    statement -> IF expression LBRACKET statements RBRACKET
Rule 14    statement -> IFELSE expression LBRACKET statements RBRACKET LBRACKET statements RBRACKET
Rule 15    statement -> WAITUNTIL LBRACKET expression RBRACKET
Rule 16    statement -> WHEN expression LBRACKET expression RBRACKET
Rule 17    statement -> SHOW expression
Rule 18    statement -> SHOW RECEIVER
Rule 19    statement -> MAKE RECEIVER expression
Rule 20    statement -> WAIT expression
Rule 21    statement -> SEND expression
Rule 22    statement -> RECORD expression
Rule 23    statement -> ERASE expression
Rule 24    statement -> SETSVH expression
Rule 25    statement -> SVR expression
Rule 26    statement -> SVL expression
Rule 27    statement -> SETPOWER expression
Rule 28    statement -> I2C_WRITE expression
Rule 29    statement -> OUTPUT expression
Rule 30    statement -> ONFOR expression
Rule 31    statement -> BSEND expression
Rule 32    statement -> BSR expression
Rule 33    statement -> SETDP expression
Rule 34    statement -> FASTSEND expression
Rule 35    statement -> BEEP
Rule 36    statement -> STOP
Rule 37    statement -> RESET
Rule 38    statement -> RESETDP
Rule 39    statement -> ON
Rule 40    statement -> OFF
Rule 41    statement -> THISWAY
Rule 42    statement -> THATWAY
Rule 43    statement -> RD
Rule 44    statement -> BRAKE
Rule 45    statement -> LEDON
Rule 46    statement -> LEDOFF
Rule 47    statement -> I2C_START
Rule 48    statement -> I2C_STOP
Rule 49    statement -> WHENOFF
Rule 50    statement -> procedurecall
Rule 51    statement -> MOTORATTENTION
Rule 52    statement -> BYTES
Rule 53    expression -> REPORTER
Rule 54    expression -> expression AND expression
Rule 55    expression -> expression OR expression
Rule 56    expression -> expression XOR expression
Rule 57    expression -> expression LESSTHAN expression
Rule 58    expression -> expression GREATERTHAN expression
Rule 59    expression -> expression EQUALS expression
Rule 60    expression -> expression PLUS expression
Rule 61    expression -> expression MINUS expression
Rule 62    expression -> expression TIMES expression
Rule 63    expression -> expression DIVIDE expression
Rule 64    expression -> expression PERCENT expression
Rule 65    expression -> MINUS expression
Rule 66    expression -> NOT expression
Rule 67    expression -> LPAREN expression RPAREN
Rule 68    expression -> LBRACKET expression RBRACKET
Rule 69    expression -> I2C_READ expression
Rule 70    expression -> HIGHBYTE expression
Rule 71    expression -> LOWBYTE expression
Rule 72    expression -> NUMBERLITERAL
Rule 73    expression -> TIMER
Rule 74    expression -> RANDOM
Rule 75    expression -> RECALL
Rule 76    expression -> SENSOR1
Rule 77    expression -> SENSOR2
Rule 78    expression -> SENSOR3
Rule 79    expression -> SENSOR4
Rule 80    expression -> SENSOR5
Rule 81    expression -> SENSOR6
Rule 82    expression -> SENSOR7
Rule 83    expression -> SENSOR8
Rule 84    expression -> SWITCH1
Rule 85    expression -> SWITCH2
Rule 86    expression -> SWITCH3
Rule 87    expression -> SWITCH4
Rule 88    expression -> SWITCH5
Rule 89    expression -> SWITCH6
Rule 90    expression -> SWITCH7
Rule 91    expression -> SWITCH8
Rule 92    expression -> NEWIRQ
Rule 93    expression -> SERIAL
Rule 94    parm -> parm expression
Rule 95    parm -> expression
Rule 96    procedurecall -> PROCEDURENAME parm
Rule 97    procedurecall -> PROCEDURENAME

Terminals, with rules where they appear

AND                  : 54
BEEP                 : 35
BRAKE                : 44
BSEND                : 31
BSR                  : 32
BYTES                : 52
DIVIDE               : 63
END                  : 3 4
EQUALS               : 59
ERASE                : 23
FASTSEND             : 34
FOREVER              : 12
GREATERTHAN          : 58
HIGHBYTE             : 70
I2C_READ             : 69
I2C_START            : 47
I2C_STOP             : 48
I2C_WRITE            : 28
IF                   : 13
IFELSE               : 14
LBRACKET             : 9 10 11 12 13 14 14 15 16 68
LEDOFF               : 46
LEDON                : 45
LESSTHAN             : 57
LOOP                 : 11
LOWBYTE              : 71
LPAREN               : 67
MAKE                 : 19
MINUS                : 61 65
MOTORATTENTION       : 51
NEWIRQ               : 92
NOT                  : 66
NUMBERLITERAL        : 72
OFF                  : 40
ON                   : 39
ONFOR                : 30
OR                   : 55
OUTPUT               : 29
PERCENT              : 64
PLUS                 : 60
PROCEDURENAME        : 3 4 96 97
RANDOM               : 74
RBRACKET             : 9 10 11 12 13 14 14 15 16 68
RD                   : 43
RECALL               : 75
RECEIVER             : 5 6 18 19
RECORD               : 22
REPEAT               : 9
REPORTER             : 53
RESET                : 37
RESETDP              : 38
RPAREN               : 67
SEND                 : 21
SENSOR1              : 76
SENSOR2              : 77
SENSOR3              : 78
SENSOR4              : 79
SENSOR5              : 80
SENSOR6              : 81
SENSOR7              : 82
SENSOR8              : 83
SERIAL               : 93
SETDP                : 33
SETPOWER             : 27
SETSVH               : 24
SHOW                 : 17 18
STOP                 : 36
SVL                  : 26
SVR                  : 25
SWITCH1              : 84
SWITCH2              : 85
SWITCH3              : 86
SWITCH4              : 87
SWITCH5              : 88
SWITCH6              : 89
SWITCH7              : 90
SWITCH8              : 91
THATWAY              : 42
THISWAY              : 41
TIMER                : 73
TIMES                : 62
TO                   : 3 4
WAIT                 : 20
WAITUNTIL            : 15
WHEN                 : 16
WHENOFF              : 49
WHILE                : 10
XOR                  : 56
error                : 

Nonterminals, with rules where they appear

expression           : 9 10 13 14 15 16 16 17 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 66 67 68 69 70 71 94 95
parameterDeclaration : 4 5
parm                 : 94 96
procedure            : 1 2
procedurecall        : 50
procedures           : 1 0
statement            : 7 8
statements           : 3 4 7 9 10 11 12 13 14 14

Parsing method: LALR

state 0

    (0) S' -> . procedures
    (1) procedures -> . procedure procedures
    (2) procedures -> . procedure
    (3) procedure -> . TO PROCEDURENAME statements END
    (4) procedure -> . TO PROCEDURENAME parameterDeclaration statements END

    TO              shift and go to state 1

    procedures                     shift and go to state 2
    procedure                      shift and go to state 3

state 1

    (3) procedure -> TO . PROCEDURENAME statements END
    (4) procedure -> TO . PROCEDURENAME parameterDeclaration statements END

    PROCEDURENAME   shift and go to state 4


state 2

    (0) S' -> procedures .



state 3

    (1) procedures -> procedure . procedures
    (2) procedures -> procedure .
    (1) procedures -> . procedure procedures
    (2) procedures -> . procedure
    (3) procedure -> . TO PROCEDURENAME statements END
    (4) procedure -> . TO PROCEDURENAME parameterDeclaration statements END

    $end            reduce using rule 2 (procedures -> procedure .)
    TO              shift and go to state 1

    procedures                     shift and go to state 5
    procedure                      shift and go to state 3

state 4

    (3) procedure -> TO PROCEDURENAME . statements END
    (4) procedure -> TO PROCEDURENAME . parameterDeclaration statements END
    (7) statements -> . statement statements
    (8) statements -> . statement
    (5) parameterDeclaration -> . RECEIVER parameterDeclaration
    (6) parameterDeclaration -> . RECEIVER
    (9) statement -> . REPEAT expression LBRACKET statements RBRACKET
    (10) statement -> . WHILE expression LBRACKET statements RBRACKET
    (11) statement -> . LOOP LBRACKET statements RBRACKET
    (12) statement -> . FOREVER LBRACKET statements RBRACKET
    (13) statement -> . IF expression LBRACKET statements RBRACKET
    (14) statement -> . IFELSE expression LBRACKET statements RBRACKET LBRACKET statements RBRACKET
    (15) statement -> . WAITUNTIL LBRACKET expression RBRACKET
    (16) statement -> . WHEN expression LBRACKET expression RBRACKET
    (17) statement -> . SHOW expression
    (18) statement -> . SHOW RECEIVER
    (19) statement -> . MAKE RECEIVER expression
    (20) statement -> . WAIT expression
    (21) statement -> . SEND expression
    (22) statement -> . RECORD expression
    (23) statement -> . ERASE expression
    (24) statement -> . SETSVH expression
    (25) statement -> . SVR expression
    (26) statement -> . SVL expression
    (27) statement -> . SETPOWER expression
    (28) statement -> . I2C_WRITE expression
    (29) statement -> . OUTPUT expression
    (30) statement -> . ONFOR expression
    (31) statement -> . BSEND expression
    (32) statement -> . BSR expression
    (33) statement -> . SETDP expression
    (34) statement -> . FASTSEND expression
    (35) statement -> . BEEP
    (36) statement -> . STOP
    (37) statement -> . RESET
    (38) statement -> . RESETDP
    (39) statement -> . ON
    (40) statement -> . OFF
    (41) statement -> . THISWAY
    (42) statement -> . THATWAY
    (43) statement -> . RD
    (44) statement -> . BRAKE
    (45) statement -> . LEDON
    (46) statement -> . LEDOFF
    (47) statement -> . I2C_START
    (48) statement -> . I2C_STOP
    (49) statement -> . WHENOFF
    (50) statement -> . procedurecall
    (51) statement -> . MOTORATTENTION
    (52) statement -> . BYTES
    (96) procedurecall -> . PROCEDURENAME parm
    (97) procedurecall -> . PROCEDURENAME

    RECEIVER        shift and go to state 50
    REPEAT          shift and go to state 32
    WHILE           shift and go to state 13
    LOOP            shift and go to state 53
    FOREVER         shift and go to state 7
    IF              shift and go to state 28
    IFELSE          shift and go to state 25
    WAITUNTIL       shift and go to state 51
    WHEN            shift and go to state 21
    SHOW            shift and go to state 20
    MAKE            shift and go to state 45
    WAIT            shift and go to state 41
    SEND            shift and go to state 47
    RECORD          shift and go to state 19
    ERASE           shift and go to state 24
    SETSVH          shift and go to state 18
    SVR             shift and go to state 39
    SVL             shift and go to state 31
    SETPOWER        shift and go to state 10
    I2C_WRITE       shift and go to state 40
    OUTPUT          shift and go to state 52
    ONFOR           shift and go to state 37
    BSEND           shift and go to state 42
    BSR             shift and go to state 22
    SETDP           shift and go to state 27
    FASTSEND        shift and go to state 14
    BEEP            shift and go to state 48
    STOP            shift and go to state 11
    RESET           shift and go to state 6
    RESETDP         shift and go to state 33
    ON              shift and go to state 15
    OFF             shift and go to state 16
    THISWAY         shift and go to state 49
    THATWAY         shift and go to state 36
    RD              shift and go to state 23
    BRAKE           shift and go to state 38
    LEDON           shift and go to state 43
    LEDOFF          shift and go to state 9
    I2C_START       shift and go to state 46
    I2C_STOP        shift and go to state 17
    WHENOFF         shift and go to state 44
    MOTORATTENTION  shift and go to state 30
    BYTES           shift and go to state 35
    PROCEDURENAME   shift and go to state 12

    statements                     shift and go to state 8
    parameterDeclaration           shift and go to state 34
    statement                      shift and go to state 26
    procedurecall                  shift and go to state 29

state 5

    (1) procedures -> procedure procedures .

    $end            reduce using rule 1 (procedures -> procedure procedures .)


state 6

    (37) statement -> RESET .

    REPEAT          reduce using rule 37 (statement -> RESET .)
    WHILE           reduce using rule 37 (statement -> RESET .)
    LOOP            reduce using rule 37 (statement -> RESET .)
    FOREVER         reduce using rule 37 (statement -> RESET .)
    IF              reduce using rule 37 (statement -> RESET .)
    IFELSE          reduce using rule 37 (statement -> RESET .)
    WAITUNTIL       reduce using rule 37 (statement -> RESET .)
    WHEN            reduce using rule 37 (statement -> RESET .)
    SHOW            reduce using rule 37 (statement -> RESET .)
    MAKE            reduce using rule 37 (statement -> RESET .)
    WAIT            reduce using rule 37 (statement -> RESET .)
    SEND            reduce using rule 37 (statement -> RESET .)
    RECORD          reduce using rule 37 (statement -> RESET .)
    ERASE           reduce using rule 37 (statement -> RESET .)
    SETSVH          reduce using rule 37 (statement -> RESET .)
    SVR             reduce using rule 37 (statement -> RESET .)
    SVL             reduce using rule 37 (statement -> RESET .)
    SETPOWER        reduce using rule 37 (statement -> RESET .)
    I2C_WRITE       reduce using rule 37 (statement -> RESET .)
    OUTPUT          reduce using rule 37 (statement -> RESET .)
    ONFOR           reduce using rule 37 (statement -> RESET .)
    BSEND           reduce using rule 37 (statement -> RESET .)
    BSR             reduce using rule 37 (statement -> RESET .)
    SETDP           reduce using rule 37 (statement -> RESET .)
    FASTSEND        reduce using rule 37 (statement -> RESET .)
    BEEP            reduce using rule 37 (statement -> RESET .)
    STOP            reduce using rule 37 (statement -> RESET .)
    RESET           reduce using rule 37 (statement -> RESET .)
    RESETDP         reduce using rule 37 (statement -> RESET .)
    ON              reduce using rule 37 (statement -> RESET .)
    OFF             reduce using rule 37 (statement -> RESET .)
    THISWAY         reduce using rule 37 (statement -> RESET .)
    THATWAY         reduce using rule 37 (statement -> RESET .)
    RD              reduce using rule 37 (statement -> RESET .)
    BRAKE           reduce using rule 37 (statement -> RESET .)
    LEDON           reduce using rule 37 (statement -> RESET .)
    LEDOFF          reduce using rule 37 (statement -> RESET .)
    I2C_START       reduce using rule 37 (statement -> RESET .)
    I2C_STOP        reduce using rule 37 (statement -> RESET .)
    WHENOFF         reduce using rule 37 (statement -> RESET .)
    MOTORATTENTION  reduce using rule 37 (statement -> RESET .)
    BYTES           reduce using rule 37 (statement -> RESET .)
    PROCEDURENAME   reduce using rule 37 (statement -> RESET .)
    RBRACKET        reduce using rule 37 (statement -> RESET .)
    END             reduce using rule 37 (statement -> RESET .)


state 7

    (12) statement -> FOREVER . LBRACKET statements RBRACKET

    LBRACKET        shift and go to state 54


state 8

    (3) procedure -> TO PROCEDURENAME statements . END

    END             shift and go to state 55


state 9

    (46) statement -> LEDOFF .

    REPEAT          reduce using rule 46 (statement -> LEDOFF .)
    WHILE           reduce using rule 46 (statement -> LEDOFF .)
    LOOP            reduce using rule 46 (statement -> LEDOFF .)
    FOREVER         reduce using rule 46 (statement -> LEDOFF .)
    IF              reduce using rule 46 (statement -> LEDOFF .)
    IFELSE          reduce using rule 46 (statement -> LEDOFF .)
    WAITUNTIL       reduce using rule 46 (statement -> LEDOFF .)
    WHEN            reduce using rule 46 (statement -> LEDOFF .)
    SHOW            reduce using rule 46 (statement -> LEDOFF .)
    MAKE            reduce using rule 46 (statement -> LEDOFF .)
    WAIT            reduce using rule 46 (statement -> LEDOFF .)
    SEND            reduce using rule 46 (statement -> LEDOFF .)
    RECORD          reduce using rule 46 (statement -> LEDOFF .)
    ERASE           reduce using rule 46 (statement -> LEDOFF .)
    SETSVH          reduce using rule 46 (statement -> LEDOFF .)
    SVR             reduce using rule 46 (statement -> LEDOFF .)
    SVL             reduce using rule 46 (statement -> LEDOFF .)
    SETPOWER        reduce using rule 46 (statement -> LEDOFF .)
    I2C_WRITE       reduce using rule 46 (statement -> LEDOFF .)
    OUTPUT          reduce using rule 46 (statement -> LEDOFF .)
    ONFOR           reduce using rule 46 (statement -> LEDOFF .)
    BSEND           reduce using rule 46 (statement -> LEDOFF .)
    BSR             reduce using rule 46 (statement -> LEDOFF .)
    SETDP           reduce using rule 46 (statement -> LEDOFF .)
    FASTSEND        reduce using rule 46 (statement -> LEDOFF .)
    BEEP            reduce using rule 46 (statement -> LEDOFF .)
    STOP            reduce using rule 46 (statement -> LEDOFF .)
    RESET           reduce using rule 46 (statement -> LEDOFF .)
    RESETDP         reduce using rule 46 (statement -> LEDOFF .)
    ON              reduce using rule 46 (statement -> LEDOFF .)
    OFF             reduce using rule 46 (statement -> LEDOFF .)
    THISWAY         reduce using rule 46 (statement -> LEDOFF .)
    THATWAY         reduce using rule 46 (statement -> LEDOFF .)
    RD              reduce using rule 46 (statement -> LEDOFF .)
    BRAKE           reduce using rule 46 (statement -> LEDOFF .)
    LEDON           reduce using rule 46 (statement -> LEDOFF .)
    LEDOFF          reduce using rule 46 (statement -> LEDOFF .)
    I2C_START       reduce using rule 46 (statement -> LEDOFF .)
    I2C_STOP        reduce using rule 46 (statement -> LEDOFF .)
    WHENOFF         reduce using rule 46 (statement -> LEDOFF .)
    MOTORATTENTION  reduce using rule 46 (statement -> LEDOFF .)
    BYTES           reduce using rule 46 (statement -> LEDOFF .)
    PROCEDURENAME   reduce using rule 46 (statement -> LEDOFF .)
    RBRACKET        reduce using rule 46 (statement -> LEDOFF .)
    END             reduce using rule 46 (statement -> LEDOFF .)


state 10

    (27) statement -> SETPOWER . expression
    (53) expression -> . REPORTER
    (54) expression -> . expression AND expression
    (55) expression -> . expression OR expression
    (56) expression -> . expression XOR expression
    (57) expression -> . expression LESSTHAN expression
    (58) expression -> . expression GREATERTHAN expression
    (59) expression -> . expression EQUALS expression
    (60) expression -> . expression PLUS expression
    (61) expression -> . expression MINUS expression
    (62) expression -> . expression TIMES expression
    (63) expression -> . expression DIVIDE expression
    (64) expression -> . expression PERCENT expression
    (65) expression -> . MINUS expression
    (66) expression -> . NOT expression
    (67) expression -> . LPAREN expression RPAREN
    (68) expression -> . LBRACKET expression RBRACKET
    (69) expression -> . I2C_READ expression
    (70) expression -> . HIGHBYTE expression
    (71) expression -> . LOWBYTE expression
    (72) expression -> . NUMBERLITERAL
    (73) expression -> . TIMER
    (74) expression -> . RANDOM
    (75) expression -> . RECALL
    (76) expression -> . SENSOR1
    (77) expression -> . SENSOR2
    (78) expression -> . SENSOR3
    (79) expression -> . SENSOR4
    (80) expression -> . SENSOR5
    (81) expression -> . SENSOR6
    (82) expression -> . SENSOR7
    (83) expression -> . SENSOR8
    (84) expression -> . SWITCH1
    (85) expression -> . SWITCH2
    (86) expression -> . SWITCH3
    (87) expression -> . SWITCH4
    (88) expression -> . SWITCH5
    (89) expression -> . SWITCH6
    (90) expression -> . SWITCH7
    (91) expression -> . SWITCH8
    (92) expression -> . NEWIRQ
    (93) expression -> . SERIAL

    REPORTER        shift and go to state 75
    MINUS           shift and go to state 63
    NOT             shift and go to state 85
    LPAREN          shift and go to state 78
    LBRACKET        shift and go to state 57
    I2C_READ        shift and go to state 83
    HIGHBYTE        shift and go to state 74
    LOWBYTE         shift and go to state 80
    NUMBERLITERAL   shift and go to state 81
    TIMER           shift and go to state 77
    RANDOM          shift and go to state 76
    RECALL          shift and go to state 82
    SENSOR1         shift and go to state 59
    SENSOR2         shift and go to state 61
    SENSOR3         shift and go to state 60
    SENSOR4         shift and go to state 73
    SENSOR5         shift and go to state 62
    SENSOR6         shift and go to state 65
    SENSOR7         shift and go to state 64
    SENSOR8         shift and go to state 58
    SWITCH1         shift and go to state 69
    SWITCH2         shift and go to state 68
    SWITCH3         shift and go to state 67
    SWITCH4         shift and go to state 84
    SWITCH5         shift and go to state 72
    SWITCH6         shift and go to state 71
    SWITCH7         shift and go to state 70
    SWITCH8         shift and go to state 66
    NEWIRQ          shift and go to state 56
    SERIAL          shift and go to state 79

    expression                     shift and go to state 86

state 11

    (36) statement -> STOP .

    REPEAT          reduce using rule 36 (statement -> STOP .)
    WHILE           reduce using rule 36 (statement -> STOP .)
    LOOP            reduce using rule 36 (statement -> STOP .)
    FOREVER         reduce using rule 36 (statement -> STOP .)
    IF              reduce using rule 36 (statement -> STOP .)
    IFELSE          reduce using rule 36 (statement -> STOP .)
    WAITUNTIL       reduce using rule 36 (statement -> STOP .)
    WHEN            reduce using rule 36 (statement -> STOP .)
    SHOW            reduce using rule 36 (statement -> STOP .)
    MAKE            reduce using rule 36 (statement -> STOP .)
    WAIT            reduce using rule 36 (statement -> STOP .)
    SEND            reduce using rule 36 (statement -> STOP .)
    RECORD          reduce using rule 36 (statement -> STOP .)
    ERASE           reduce using rule 36 (statement -> STOP .)
    SETSVH          reduce using rule 36 (statement -> STOP .)
    SVR             reduce using rule 36 (statement -> STOP .)
    SVL             reduce using rule 36 (statement -> STOP .)
    SETPOWER        reduce using rule 36 (statement -> STOP .)
    I2C_WRITE       reduce using rule 36 (statement -> STOP .)
    OUTPUT          reduce using rule 36 (statement -> STOP .)
    ONFOR           reduce using rule 36 (statement -> STOP .)
    BSEND           reduce using rule 36 (statement -> STOP .)
    BSR             reduce using rule 36 (statement -> STOP .)
    SETDP           reduce using rule 36 (statement -> STOP .)
    FASTSEND        reduce using rule 36 (statement -> STOP .)
    BEEP            reduce using rule 36 (statement -> STOP .)
    STOP            reduce using rule 36 (statement -> STOP .)
    RESET           reduce using rule 36 (statement -> STOP .)
    RESETDP         reduce using rule 36 (statement -> STOP .)
    ON              reduce using rule 36 (statement -> STOP .)
    OFF             reduce using rule 36 (statement -> STOP .)
    THISWAY         reduce using rule 36 (statement -> STOP .)
    THATWAY         reduce using rule 36 (statement -> STOP .)
    RD              reduce using rule 36 (statement -> STOP .)
    BRAKE           reduce using rule 36 (statement -> STOP .)
    LEDON           reduce using rule 36 (statement -> STOP .)
    LEDOFF          reduce using rule 36 (statement -> STOP .)
    I2C_START       reduce using rule 36 (statement -> STOP .)
    I2C_STOP        reduce using rule 36 (statement -> STOP .)
    WHENOFF         reduce using rule 36 (statement -> STOP .)
    MOTORATTENTION  reduce using rule 36 (statement -> STOP .)
    BYTES           reduce using rule 36 (statement -> STOP .)
    PROCEDURENAME   reduce using rule 36 (statement -> STOP .)
    RBRACKET        reduce using rule 36 (statement -> STOP .)
    END             reduce using rule 36 (statement -> STOP .)


state 12

    (96) procedurecall -> PROCEDURENAME . parm
    (97) procedurecall -> PROCEDURENAME .
    (94) parm -> . parm expression
    (95) parm -> . expression
    (53) expression -> . REPORTER
    (54) expression -> . expression AND expression
    (55) expression -> . expression OR expression
    (56) expression -> . expression XOR expression
    (57) expression -> . expression LESSTHAN expression
    (58) expression -> . expression GREATERTHAN expression
    (59) expression -> . expression EQUALS expression
    (60) expression -> . expression PLUS expression
    (61) expression -> . expression MINUS expression
    (62) expression -> . expression TIMES expression
    (63) expression -> . expression DIVIDE expression
    (64) expression -> . expression PERCENT expression
    (65) expression -> . MINUS expression
    (66) expression -> . NOT expression
    (67) expression -> . LPAREN expression RPAREN
    (68) expression -> . LBRACKET expression RBRACKET
    (69) expression -> . I2C_READ expression
    (70) expression -> . HIGHBYTE expression
    (71) expression -> . LOWBYTE expression
    (72) expression -> . NUMBERLITERAL
    (73) expression -> . TIMER
    (74) expression -> . RANDOM
    (75) expression -> . RECALL
    (76) expression -> . SENSOR1
    (77) expression -> . SENSOR2
    (78) expression -> . SENSOR3
    (79) expression -> . SENSOR4
    (80) expression -> . SENSOR5
    (81) expression -> . SENSOR6
    (82) expression -> . SENSOR7
    (83) expression -> . SENSOR8
    (84) expression -> . SWITCH1
    (85) expression -> . SWITCH2
    (86) expression -> . SWITCH3
    (87) expression -> . SWITCH4
    (88) expression -> . SWITCH5
    (89) expression -> . SWITCH6
    (90) expression -> . SWITCH7
    (91) expression -> . SWITCH8
    (92) expression -> . NEWIRQ
    (93) expression -> . SERIAL

    REPEAT          reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    WHILE           reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    LOOP            reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    FOREVER         reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    IF              reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    IFELSE          reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    WAITUNTIL       reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    WHEN            reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    SHOW            reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    MAKE            reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    WAIT            reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    SEND            reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    RECORD          reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    ERASE           reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    SETSVH          reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    SVR             reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    SVL             reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    SETPOWER        reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    I2C_WRITE       reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    OUTPUT          reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    ONFOR           reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    BSEND           reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    BSR             reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    SETDP           reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    FASTSEND        reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    BEEP            reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    STOP            reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    RESET           reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    RESETDP         reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    ON              reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    OFF             reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    THISWAY         reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    THATWAY         reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    RD              reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    BRAKE           reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    LEDON           reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    LEDOFF          reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    I2C_START       reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    I2C_STOP        reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    WHENOFF         reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    MOTORATTENTION  reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    BYTES           reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    PROCEDURENAME   reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    RBRACKET        reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    END             reduce using rule 97 (procedurecall -> PROCEDURENAME .)
    REPORTER        shift and go to state 75
    MINUS           shift and go to state 63
    NOT             shift and go to state 85
    LPAREN          shift and go to state 78
    LBRACKET        shift and go to state 57
    I2C_READ        shift and go to state 83
    HIGHBYTE        shift and go to state 74
    LOWBYTE         shift and go to state 80
    NUMBERLITERAL   shift and go to state 81
    TIMER           shift and go to state 77
    RANDOM          shift and go to state 76
    RECALL          shift and go to state 82
    SENSOR1         shift and go to state 59
    SENSOR2         shift and go to state 61
    SENSOR3         shift and go to state 60
    SENSOR4         shift and go to state 73
    SENSOR5         shift and go to state 62
    SENSOR6         shift and go to state 65
    SENSOR7         shift and go to state 64
    SENSOR8         shift and go to state 58
    SWITCH1         shift and go to state 69
    SWITCH2         shift and go to state 68
    SWITCH3         shift and go to state 67
    SWITCH4         shift and go to state 84
    SWITCH5         shift and go to state 72
    SWITCH6         shift and go to state 71
    SWITCH7         shift and go to state 70
    SWITCH8         shift and go to state 66
    NEWIRQ          shift and go to state 56
    SERIAL          shift and go to state 79

    parm                           shift and go to state 87
    expression                     shift and go to state 88

state 13

    (10) statement -> WHILE . expression LBRACKET statements RBRACKET
    (53) expression -> . REPORTER
    (54) expression -> . expression AND expression
    (55) expression -> . expression OR expression
    (56) expression -> . expression XOR expression
    (57) expression -> . expression LESSTHAN expression
    (58) expression -> . expression GREATERTHAN expression
    (59) expression -> . expression EQUALS expression
    (60) expression -> . expression PLUS expression
    (61) expression -> . expression MINUS expression
    (62) expression -> . expression TIMES expression
    (63) expression -> . expression DIVIDE expression
    (64) expression -> . expression PERCENT expression
    (65) expression -> . MINUS expression
    (66) expression -> . NOT expression
    (67) expression -> . LPAREN expression RPAREN
    (68) expression -> . LBRACKET expression RBRACKET
    (69) expression -> . I2C_READ expression
    (70) expression -> . HIGHBYTE expression
    (71) expression -> . LOWBYTE expression
    (72) expression -> . NUMBERLITERAL
    (73) expression -> . TIMER
    (74) expression -> . RANDOM
    (75) expression -> . RECALL
    (76) expression -> . SENSOR1
    (77) expression -> . SENSOR2
    (78) expression -> . SENSOR3
    (79) expression -> . SENSOR4
    (80) expression -> . SENSOR5
    (81) expression -> . SENSOR6
    (82) expression -> . SENSOR7
    (83) expression -> . SENSOR8
    (84) expression -> . SWITCH1
    (85) expression -> . SWITCH2
    (86) expression -> . SWITCH3
    (87) expression -> . SWITCH4
    (88) expression -> . SWITCH5
    (89) expression -> . SWITCH6
    (90) expression -> . SWITCH7
    (91) expression -> . SWITCH8
    (92) expression -> . NEWIRQ
    (93) expression -> . SERIAL
